<resources>
    <string name="app_name">The Cheezery</string>
    <string name="welcome_text">Welcome to the Cheezery</string>
    <string name="welcome_description">Home of the most wonderful desserts ever seen (and tasted)
    by the human being</string>
    <string name="button_start">get Stared!</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="terms">I hace read and acept terms and conditions of the Cheezery</string>
    <string name="sign_in">Sign in</string>
    <string name="logo">logo</string>
    <string name="our_menu">Our Menu</string>
    <string name="cold_drinks">Cold Drinks</string>
    <string name="hot_drinks">Hot Drinks</string>

    <string name="sweets">Sweets</string>
    <string name="salties">Salties</string>

    <string name="combos">Combos</string>
    <string name="custom">Custom</string>
</resources>