<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    tools:context=".RegisterActivity">


    <ImageView
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/hello" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/lastname_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/last_name"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <CheckBox
        android:id="@+id/term_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin"
        android:fontFamily="sans-serif-light"
        android:text="@string/terms"
        android:textSize="15sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:text="@string/sign_in"
        android:textColor="@color/dusty_white"

        />


</LinearLayout>