<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/purple_grey"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:src="@drawable/thecheezery"
        android:scaleType="fitXY"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/dusty_white"
        android:text="@string/welcome_text"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic"
        android:textColor="@color/dusty_white"
        android:text="@string/welcome_description"
        android:textAlignment="center"
        android:padding="15dp" />
    <Button
        android:id="@+id/get_stared_button"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        android:background="@drawable/round_button"
        android:textColor="@color/white"
        android:layout_gravity="center" />


</LinearLayout>